add base url config

--- a/env.example
+++ b/env.example
@@ -6,3 +6,9 @@ VITE_ENV=dev
 VITE_API_BASE_URL_DEV=http://localhost:8080/api
 # Production environment  
 VITE_API_BASE_URL_PROD=https://vietlong.com/api
+
+# File Server Configuration
+# Dev environment
+VITE_FILE_SERVER_BASE_URL_DEV=http://localhost:8080
+# Production environment
+VITE_FILE_SERVER_BASE_URL_PROD=https://vietlong.com
